# streamlink-debian

./: .gitignore  .travis.yml  PKG-INFO  check-upstream.sh  pyproject.toml  setup.cfg  setup.py  streamlink_0.10.0+dfsg.orig.tar.xz.delta  streamlink_0.10.0+dfsg.orig.tar.xz.id  streamlink_0.11.0+dfsg.orig.tar.xz.delta  streamlink_0.11.0+dfsg.orig.tar.xz.id  streamlink_0.12.1+dfsg.orig.tar.xz.delta  streamlink_0.12.1+dfsg.orig.tar.xz.id  streamlink_0.13.0+dfsg.orig.tar.xz.delta  streamlink_0.13.0+dfsg.orig.tar.xz.id  streamlink_0.14.0+dfsg.orig.tar.xz.delta  streamlink_0.14.0+dfsg.orig.tar.xz.id  streamlink_0.14.2+dfsg.orig.tar.xz.delta  streamlink_0.14.2+dfsg.orig.tar.xz.id  streamlink_0.8.1.orig.tar.gz.delta  streamlink_0.8.1.orig.tar.gz.id  streamlink_0.9.0+dfsg.2.orig.tar.xz.delta  streamlink_0.9.0+dfsg.2.orig.tar.xz.id  streamlink_0.9.0+dfsg.orig.tar.xz.delta  streamlink_0.9.0+dfsg.orig.tar.xz.id  streamlink_0.9.0.orig.tar.gz.asc  streamlink_0.9.0.orig.tar.gz.delta  streamlink_0.9.0.orig.tar.gz.id  streamlink_0.9.0.orig.tar.xz.delta  streamlink_1.0.0+dfsg.orig.tar.xz.delta  streamlink_1.0.0+dfsg.orig.tar.xz.id  streamlink_1.1.1+dfsg.orig.tar.xz.delta  streamlink_1.1.1+dfsg.orig.tar.xz.id  streamlink_1.2.0+dfsg.orig.tar.xz.delta  streamlink_1.2.0+dfsg.orig.tar.xz.id  streamlink_1.3.0+dfsg.orig.tar.xz.delta  streamlink_1.3.0+dfsg.orig.tar.xz.id  streamlink_1.3.1+dfsg.orig.tar.xz.delta  streamlink_1.3.1+dfsg.orig.tar.xz.id  streamlink_1.4.1+dfsg.orig.tar.xz.delta  (+156 more)
debian/: README.source  README.source.md  changelog  control  copyright  create_rfs_mail.sh  gbp.conf  rules  (+10 more)
(+86 files in other folders)
