[wheel]
universal = 1

[metadata]
license_file = LICENSE

[versioneer]
vcs = git
style = pep440
versionfile_source = src/streamlink/_version.py
versionfile_build = streamlink/_version.py
tag_prefix = 
parentdir_prefix = streamlink-

[flake8]
ignore = 
	W503,
exclude = 
	__pycache__/,
	.git/,
	build/,
	dist/,
	docs/,
	env/,
	src/streamlink/packages/flashmedia/,
	venv/,
	versioneer.py,
	win32/,
max-line-length = 128
show-source = True
statistics = True
builtins = 
	basestring,
	file,
	raw_input,
	unicode,
	xrange,

[egg_info]
tag_build = 
tag_date = 0

